absolute path to relative path

--- a/components/hpot_header.html
+++ b/components/hpot_header.html
@@ -1,6 +1,6 @@
 <div class="header hpot-header">
 
-  <a href="#"><img src="/img/hpot_logo.jpg" /></a>
+  <a href="#"><img src="../img/hpot_logo.jpg" /></a>
 
   <ol class="nav">
     <li class="nohover">
