--- a/components/hpot_logo.html
+++ b/components/hpot_logo.html
@@ -1,5 +1,5 @@
 <div class="logo hpot-logo">
-  <a href="#"><img src="/img/hpot_logo.jpg" /></a>
+  <a href="#"><img src="../img/hpot_logo.jpg" /></a>
   <p class="word delay1">
     機械になりたい、って思った。
   </p>
