--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 div.header {
-  margin: 0 0 5em;
+  margin: 0;
   padding: 0;
 }
 
@@ -24,7 +24,7 @@ div.header ol.nav {
 div.header ol.nav li {
   color: #ccc;
   min-width: 2em;
-  margin: 0 0.5em;
+  margin: 0 0.125em;
   padding: 0;
   display: inline-block;
   text-align: center;
@@ -47,10 +47,54 @@ div.header ol.nav li:hover:not(.nohover) {
   border-bottom: solid 3px #88f;
 }
 
+div.footer {
+  margin: 5em 0 0;
+  padding: 0;
+}
+
+div.footer .hr {
+  background-color: #ccc;
+  width: 100%;
+  height: 0.2em;
+}
+
+div.footer ol.nav {
+  list-style: none;
+  width: 37em;
+  margin: 0;
+  padding: 0;
+}
+
+div.footer ol.nav li {
+  color: #ccc;
+  min-width: 2em;
+  margin: 0 0.125em;
+  padding: 0;
+  display: inline-block;
+  text-align: center;
+}
+
+div.footer ol.nav li a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+div.footer ol.nav li {
+  border-bottom: solid 3px #fff;
+}
+
+div.footer ol.nav li[now="true"] {
+  border-bottom: solid 3px #88f;
+}
+
+div.footer ol.nav li:hover:not(.nohover) {
+  border-bottom: solid 3px #88f;
+}
+
 div.contents {
   color: #555;
   width: 37em;
-  margin: 0 auto 0;
+  margin: 5em auto 5em;
   padding: 0;
 }
 
