--- a/css/desktop.css
+++ b/css/desktop.css
@@ -58,6 +58,13 @@ div.footer .hr {
   height: 0.2em;
 }
 
+div.footer ol.nav1 {
+  list-style: none;
+  width: 37em;
+  margin: 0;
+  padding: 0;
+}
+
 div.footer ol.nav {
   list-style: none;
   width: 37em;
@@ -71,7 +78,6 @@ div.footer ol.nav li {
   margin: 0 0.125em;
   padding: 0;
   display: inline-block;
-  text-align: center;
 }
 
 div.footer ol.nav li a {
@@ -81,6 +87,10 @@ div.footer ol.nav li a {
 
 div.footer ol.nav li {
   border-bottom: solid 3px #fff;
+}
+
+div.footer ol.nav li.nohover {
+  width: 16em;
 }
 
 div.footer ol.nav li[now="true"] {
