--- a/css/desktop.css
+++ b/css/desktop.css
@@ -140,25 +140,29 @@ ol.chapters {
 }
 
 ol.chapters li {
-  width: 18em;
-  margin: 2em auto 2em;
+  width: 37em;
+  margin: 0;
   padding: 0;
 }
 
 ol.chapters li p {
+  width: 16em;
   color: #555;
   font-weight: bold;
+  display: inline-block;
 }
 
 ol.chapters li ol {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: inline-block;
 }
 
 ol.chapters li ol li {
-  width: 1.5em;
-  margin: 0 0.25em;
+  color: #ccc;
+  width: 2em;
+  margin: 0 0.125em;
   padding: 0;
   display: inline-block;
   text-align: center;
