小手先の対応

--- a/hardproblem/mobile.css
+++ b/hardproblem/mobile.css
@@ -137,6 +137,12 @@ div.contents {
 
 div.contents div.text {
   white-space: pre-wrap;
+  font-size: 1em;
+}
+
+div.contents ruby {
+  white-space: pre-wrap;
+  font-size: 1em;
 }
 
 div.contents img {
