--- a/hardproblem/mobile.css
+++ b/hardproblem/mobile.css
@@ -146,6 +146,18 @@ div.contents img {
 }
 
 /**************************************\
+ * Contents
+\**************************************/
+div.contents div.logo {
+  border: solid 1px #555;
+}
+
+div.contents div.logo img {
+  width: 100%;
+}
+
+
+/**************************************\
  * Index of Main page
 \**************************************/
 #main-hpot-index ol {
