枠線薄くしてみる

--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -153,10 +153,10 @@ div.contents div.text {
 }
 
 /**************************************\
- * Contents
+ * Logo of Contents
 \**************************************/
 div.contents div.logo {
-  border: solid 1px #555;
+  border: solid 1px #ccc;
 }
 
 div.contents div.logo img {
