--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -3,6 +3,10 @@ body {
   padding: 0;
 }
 
+a img {
+  border-style: none;
+}
+
 /**************************************\
  * Header
 \**************************************/
