文字を拡大しない

--- a/hardproblem/mobile.css
+++ b/hardproblem/mobile.css
@@ -1,7 +1,13 @@
 body {
   margin: 0;
   padding: 0;
+  text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -o-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
+
 
 a img {
   border-style: none;
