--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ a:visited {color:#ff0000;}
   text-align: center;
 }
 
-table{
+table.top{
   table-layout:fixed;
   width:400px;
   margin-top:3em;
@@ -16,3 +16,27 @@ table{
   font:large/200% "メイリオ",sans-serif;
   padding: 0;
 }
+
+table.picture{
+  table-layout:fixed;
+  width:640px;
+  margin-top:4em;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+table.picture img{
+  border: 1px #000000 solid;
+}
+
+table.picture>caption{
+  font:large/150% "メイリオ",sans-serif;
+  text-align:left;
+}
+
+.back{
+  font:large/200% "メイリオ",sans-serif;
+  text-align:center;
+  margin-top:4em;
+  margin-bottom:2em;}
+
