--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "源ノ角ゴシック JP Regular";
+  src: url("https://dl.dropboxusercontent.com/u/125933124/fonts/SourceHanSansJP-Regular.otf");
+}
+
+
 @media not screen and (max-device-width: 480px) {
 
 /**************************************\
@@ -156,6 +162,7 @@ div.contents {
 
 div.contents div.text {
   line-height: 2;
+  font-family: "源ノ角ゴシック JP Regular" 
 }
 
 div.contents div.text {
@@ -229,7 +236,4 @@ div.contents div.logo img {
 
 }
 
-@font-face {
-  font-family: "源ノ角ゴシック JP Regular";
-  src: url("https://dl.dropboxusercontent.com/u/125933124/fonts/SourceHanSansJP-Regular.otf");
-}
+
