困ったときの

--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -162,7 +162,7 @@ div.contents {
 
 div.contents div.text {
   line-height: 2;
-  font-family: "源ノ角ゴシック JP Regular" ; !important
+  font-family: "源ノ角ゴシック JP Regular" !important ; 
 }
 
 div.contents div.text {
