--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "源ノ角ゴシック JP Regular";
-  src: url("http://dl.dropboxusercontent.com/u/125933124/fonts/SourceHanSansJP-Regular.otf") format("opentype") ;
+  src: url("../fonts/SourceHanSansJP-Regular.otf") format("opentype") ;
 }
 
 
