--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 a:link{color:#ff0000;}
+
 a:visited {color:#ff0000;}
+
+html {
+overflow-y:scroll;
+}
 
 *{
   font-family:"メイリオ","Meiryo",sans-serif;
@@ -84,8 +89,10 @@ table.novel td{
   border: solid 1px #555555
 }
 
-.noveltitle{
+.noveltitle td{
   text-align:center;
+  height:100px;
+  font-size:x-large;
   }
   
 .noveldata1{
@@ -96,7 +103,7 @@ table.novel td{
  
 .noveldata2{
   text-align:center;
-  font:large/100% "メイリオ",sans-serif;
+  font:medium/100% "メイリオ",sans-serif;
   height:3em;
   }
 
@@ -107,4 +114,17 @@ table.novel td{
   padding-bottom:0.5em;
   text-align:justify;
 　font:large/100% "メイリオ",sans-serif;
+}
+
+table.short{
+  table-layout:auto;
+  width:800px;
+  margin-top:0.5em;
+  margin-left:auto;
+  margin-right:auto;
+  border: solid 1px #555555
+}
+
+table.short td{
+  border: solid 1px #555555
 }
