--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@ table.top{
   padding: 0;
 }
 
+.information{
+  width:640px;
+  margin-top:3em;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  font:midium/100% "メイリオ","Meiryo",sans-serif;
+  padding: 1em;
+  border: 1px #000000 solid;
+}
+
+
 .picture_text{
   text-align:center;
   margin-top:3em;
