--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -1,8 +1,14 @@
 @font-face {
   font-family: "源ノ角ゴシック JP Regular";
   src: url("../fonts/SourceHanSansJP-Regular.otf") format("opentype") ;
+}
+
+@font-face {
   font-family: "Source Han Sans JP Regular";
   src: url("../fonts/SourceHanSansJP-Regular.otf") format("opentype") ;
+}
+
+@font-face {
   font-family: "Source Han Sans CN Regular";
   src: url("../fonts/SourceHanSansCN-Regular.otf") format("opentype") ;
 }
