--- a/style.css
+++ b/style.css
@@ -144,18 +144,31 @@ table.short td{
 table.link{
   table-layout:auto;
   width:700px;
-  margin-top:3em;
+  margin-top:1em;
   margin-left:auto;
   margin-right:auto;
 }
 
 table.link td.banner{
   text-align:center;
-  padding-top:0.5em;
-  padding-bottom:0.5em;
+  padding-top:0em;
+  padding-bottom:0em;
+}
+
+table.link td.nobanner{
+  text-align:center;
+  padding-top:0em;
+  padding-bottom:0em;
+  border: 1px #000000 solid;
 }
 
 table.link img{
   border: 1px #000000 solid;
+}
+
+.linktop{
+  margin-top:3em;
+  margin-bottom:1em;
+  text-align:center;
 }
 
