--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ table.short td{
 
 table.link{
   table-layout:auto;
-  width:700px;
+  width:640px;
   margin-top:1em;
   margin-left:auto;
   margin-right:auto;
@@ -159,6 +159,8 @@ table.link td.nobanner{
   text-align:center;
   padding-top:0em;
   padding-bottom:0em;
+  margin-left:auto;
+  margin-right:auto;
   border: 1px #000000 solid;
 }
 
